static/collection-style.css
* {
    box-sizing: border-box;
}

html, body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100vh; 
    
    display: flex;
    flex-direction: column;

    background-color: #19256E;
    background-image: radial-gradient(
        circle at 50% 40%, 
        rgba(20, 70, 157, 0.4) 0%, 
        rgba(25, 37, 110, 1) 70% 
    );
    font-family: "Unbounded", sans-serif; 
}


@font-face {
    font-family: "Unbounded";
    src: url("../static/fonts/unbounded-medium.ttf") format("truetype");
    font-weight: medium;
    font-style: normal;
}

p, #title {
    font-family: "Unbounded", sans-serif;
    color: rgb(255, 255, 255);
}

#title {
    font-size: 60px;
    margin: 10px 0px 10px 0px;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex: 1;
    width: 100%;
    overflow: hidden;
}

 #row {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex: 1;
    width: 100%;
    overflow: hidden;
 }

  .left-box {
    width: auto;
    display: flex;
    flex-direction: column;
    padding-top: 0px;
    margin: 0 50px;
    gap: 30px;
    overflow-y: auto;
}

.right-box {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 20px;
    overflow-y: auto;
    height: 100%;
}

 .horizontal-seperator {
    border: none;
    height: 1px;
    width: 100%;
    background-color: white;
    margin: 0;
 }

 .vertical-seperator {
    border: none;
    width: 1px;
    height: 100%;
    background-color: white;
    margin: 0;
 }

 #filter {
    font-size: 50px;
    font-family: "Unbounded", sans-serif;
 }

 .crypto-table {
    width: 90%;
    color: white;
    font-family: "Unbounded", sans-serif;
    overflow-y: auto;
}


.table-header, .table-row {
    display: grid;

    grid-template-columns: 50px  2fr  1.5fr  1fr  1.5fr  50px;
    
    align-items: center;
    padding: 15px 0;
}


.table-header {
    font-weight: bold;
    font-size: 14px;
    text-transform: uppercase;
    position: sticky;
    z-index: 10;
    top: 0;
    background-color: #19256E;
    background-image: radial-gradient(
        circle at 50% 40%, 
        rgba(20, 70, 157, 0.4) 0%, 
        rgba(25, 37, 110, 1) 70% 
    );
}

.table-header::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;

    background-color: #19256E;
    background-image: radial-gradient(
        circle at 50% 40%, 
        rgba(20, 70, 157, 0.4) 0%, 
        rgba(25, 37, 110, 1) 70%
    );

    background-attachment: fixed;

    z-index: -1;
}


.table-row {
    font-size: 18px;
    font-weight: 500;
    border-bottom: 1px solid rgba(255, 255, 255, 1); 
}

.header-separator {
    height: 1px;
    background-color: rgba(255, 255, 255, 1);
    margin-bottom: 20px;
}

.coin-info {
    display: flex;
    align-items: center;
    gap: 10px; 
}

.coin-logo {
    width: 30px;
    height: 30px;
    border-radius: 50%;
}

.logo {
    width: 63px;
    height: 63px;
}

.green-text { color: #2ecc71; }
.red-text { color: #e74c3c; }

.heart-icon {
    cursor: pointer;
    width: 40px;
    height: 40px;
}

.left-box label {
    font-family: "Unbounded", sans-serif;
    color: white;
    font-size: 20px;
    cursor: pointer;
    text-transform: uppercase;
}

.row-link {
    text-decoration: none;
    color: inherit;
    display: block;
}

header {
    flex-shrink: 0;
    margin: 15px 0px;
    display: flex;
    width: 100%;
    justify-content: center;
    align-items: center;
}

#nav {
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 70%;
    height: 100%;
}

.search-box {
    display: flex;
    width: 250px;
    border: 2px solid white;   
    border-radius: 25px;
    overflow: hidden;
    background-color: #dfffcf00;   
}

.search-box input {
    flex: 1;
    padding: 10px;
    border: none;
    outline: none;
    background-color: #dfffcf00;  
    color: #2F6E00;          
}

.search-box button {
    padding: 10px 15px;
    border: none;
    background: white;      
    color: white;               
    cursor: pointer;
    font-size: 1rem;
}

.search-box input::placeholder {
    color: white;  
    opacity: 0.8;
    font-family: "Unbounded";   
}

.search-bar-logo {
    margin-left: 20px;
    fill: #4BCC00;
}



.top {
    font-family: "Unbounded", sans-serif;
    color: white;
    cursor: pointer;
    font-size: 1rem;
}

.top:hover {
    color: #4BCC00;
}

#account-btn{
    font-family: "unbounded", sans-serif;
    color: white;
    background-color: #4BCC00;
    border-radius: 30px;
    padding: 15px;
    cursor: pointer;
    font-size: 0.8rem;
}

#account-btn:hover {
    color: white;
    background-color: #40ac02;
}

